DescomplicandoKubernetes/day-15/deployment-giropops-senhas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - image: linuxtips/giropops-senhas:1.0
        name: giropops-senhas
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        #resources:
         # requests:
          #  memory: "128Mi"
           # cpu: "250m"
          #limits:
           # memory: "256Mi"
            #cpu: "500m"
