DescomplicandoKubernetes/day-15/ingress-giropops-senhas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    #nginx.ingress.kubernetes.io/limit-rps: "1100" # limita a 2 requisicoes por segundo
    nginx.ingress.kubernetes.io/rewrite-target: /
    #---
    #nginx.ingress.kubernetes.io/auth-type: basic # habilita autenticacao basica
    #nginx.ingress.kubernetes.io/auth-secret: giropops-senhas-basic-auth # nome do secret que contem usuario e senha
    #nginx.ingress.kubernetes.io/auth-realm: "Protected Area - Enter your credentials" # mensagem que aparece na tela de login
    #---
    #nginx.ingress.kubernetes.io/affinity: "cookie" # habilita afinidade por cookie, para que o usuario sempre caia na mesma instancia/pod
    #nginx.ingress.kubernetes.io/session-cookie-name: "cookie-com-marceleza-senhas" # nome do cookie usado para afinidade
    #---
    #nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri" # define a chave para afinidade (nesse caso, a URI da requisicao)
    #---
    #cert-manager.io/cluster-issuer: letsencrypt-production # referencia o ClusterIssuer criado anteriormente
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
   # - senhas.marceleza.com
    #secretName: senhas-marceleza-com-tls
  rules:
  - host: senhas.marceleza.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
